--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -264,7 +264,6 @@ body {
   /* border: 2px solid #d13e34; */
   border-radius: 1rem;
   margin-right: 1rem;
-  margin-bottom: 1rem;
   position: relative;
   width: 100%;
   max-width: 100%;
@@ -272,6 +271,24 @@ body {
   cursor: pointer;
   color: #2c3e50;
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  /* margin-bottom: 1rem; */
+}
+
+.instructor-attendance-history-pill:hover,
+.instructor-attendance-history-pill:focus {
+  display: inline-block;
+  position: relative;
+  margin-left: -0.5rem;
+  margin-top: -0.5rem;
+  margin-right: -0.5rem;
+  margin-bottom: 0.25rem;
+  max-width: 25rem;
+  width: 25rem;
+  max-height: 5rem;
+  height: 5rem;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  outline: none;
 }
 
 .instructor-attendance-history-pill .date-area {
@@ -287,6 +304,13 @@ body {
   color: white;
   font-size: 1rem;
   margin-right: 15px;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.instructor-attendance-history-pill:hover .date-area,
+.instructor-attendance-history-pill:focus .date-area {
+  padding-top: 0.625rem;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .student-attendance .instructor-attendance-history-pill .date-area {
@@ -303,7 +327,7 @@ body {
   width: 60%;
   position: absolute;
   top: 0;
-  padding-top: 0.25rem;
+  padding-top: 0.3rem;
   left: 20%;
   bottom: 0;
   padding-left: 1rem;
@@ -313,6 +337,13 @@ body {
   /* color: white; */
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644) inset;
   text-align: left;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.instructor-attendance-history-pill:hover .name-area,
+.instructor-attendance-history-pill:focus .name-area {
+  padding-top: 0.8rem;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill .date-area .day-of-week {
@@ -352,6 +383,13 @@ body {
   line-height: 4rem;
   color: white;
   font-size: 1.2rem;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.instructor-attendance-history-pill:hover .percentage-area,
+.instructor-attendance-history-pill:focus .percentage-area {
+  line-height: 5rem;
+  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill .percentage-area::before {
