--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -288,6 +288,7 @@ body {
   max-height: 5rem;
   height: 5rem;
   border-radius: 1.5rem;
+  box-shadow: 0px 3px 3px 2px rgba(109, 109, 109, 0.644);
   transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
   outline: none;
 }
@@ -345,6 +346,7 @@ body {
 .instructor-attendance-history-pill:focus .name-area {
   padding-top: 0.8rem;
   border-radius: 1rem;
+  box-shadow: 0px 3px 3px 2px rgba(109, 109, 109, 0.644) inset;
   transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
