--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -92,7 +92,7 @@ body {
 .venue-body-container .course-info-title {
   width: 380px;
   padding: 40px 30px;
-  box-shadow: 0px 3px 6px rgba(0, 62, 123, 0.2);
+  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
   border-radius: 5px;
   margin-right: 2rem;
 }
@@ -122,7 +122,7 @@ body {
   margin-top: 1rem;
   padding: 2rem 0;
   border-radius: 5px;
-  box-shadow: 0px 3px 6px rgba(0, 62, 123, 0.2);
+  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
 }
 
 .course-info-title.mobile .course-name {
@@ -271,7 +271,7 @@ body {
   cursor: pointer;
   color: #2c3e50;
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   /* margin-bottom: 1rem; */
 }
 
@@ -289,7 +289,7 @@ body {
   height: 5rem;
   border-radius: 1.5rem;
   box-shadow: 0px 3px 3px 2px rgba(109, 109, 109, 0.644);
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   outline: none;
 }
 
@@ -306,13 +306,13 @@ body {
   color: white;
   font-size: 1rem;
   margin-right: 15px;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill:hover .date-area,
 .instructor-attendance-history-pill:focus .date-area {
   padding-top: 0.625rem;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .student-attendance .instructor-attendance-history-pill .date-area {
@@ -339,7 +339,7 @@ body {
   /* color: white; */
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644) inset;
   text-align: left;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill:hover .name-area,
@@ -347,7 +347,7 @@ body {
   padding-top: 0.8rem;
   border-radius: 1rem;
   box-shadow: 0px 3px 3px 2px rgba(109, 109, 109, 0.644) inset;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill .date-area .day-of-week {
@@ -387,13 +387,13 @@ body {
   line-height: 4rem;
   color: white;
   font-size: 1.2rem;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill:hover .percentage-area,
 .instructor-attendance-history-pill:focus .percentage-area {
   line-height: 5rem;
-  transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .instructor-attendance-history-pill .percentage-area::before {
@@ -550,7 +550,7 @@ body {
 
 .dashboard-section-modal .course-pill .foreground-pillar {
   border-radius: 5px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
   position: relative;
   z-index: 3;
   background-color: white;
@@ -783,7 +783,7 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: white;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
   position: relative;
   z-index: 2;
   padding: 0px 20px;
