--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -815,6 +815,7 @@ a:hover {
 
 .btn {
   border-radius: 0.25rem;
+  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
 }
 
 /* .btn.btn-primary {
