--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -853,14 +853,15 @@ a:hover {
 
 .btn.btn-primary {
   background: #0078c2;
-  border: 0.1rem solid #005183;
+  /* border: 0.1rem solid #005183; */
   box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
 }
 
 .btn.btn-secondary {
   background: #727272;
-  border: 0.1rem solid #444444;
+  /* border: 0.1rem solid #444444; */
   box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .btn.btn-primary:hover,
@@ -870,6 +871,16 @@ a:hover {
   outline: none;
   border: 0.1rem solid #005183;
   background: #005183;
+  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644) inset;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn.btn-primary:hover img,
+.btn.btn-primary:focus img,
+.btn.btn-primary:active img,
+.btn.btn-primary:target img {
+  filter: invert(1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .btn.btn-secondary:hover,
@@ -879,4 +890,26 @@ a:hover {
   outline: none;
   border: 0.1rem solid #444444;
   background: #444444;
+  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644) inset;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn.btn-secondary:hover img,
+.btn.btn-secondary:focus img,
+.btn.btn-secondary:active img,
+.btn.btn-secondary:target img {
+  filter: invert(1);
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+
+
+input,select {
+  background: #f7f7f7 !important;
+  border-radius: 0.25rem !important;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.input-group input {
+  min-height:3rem;
 }
