--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -120,7 +120,7 @@ body {
 .course-info-title.mobile {
   margin: 0rem 2rem;
   margin-top: 1rem;
-  padding: 2rem 0;
+  padding: 2rem;
   border-radius: 5px;
   box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
 }
@@ -912,4 +912,82 @@ input,select {
 
 .input-group input {
   min-height:3rem;
+}
+
+/* ------------------ */
+
+.venue-modal-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.65);
+  z-index: 99;
+}
+
+.venue-modal-contents {
+  position: fixed;
+  width: 50%;
+  height: 50%;
+  margin: 12.5% 25%;
+  background: white;
+  border: 1px solid gray;
+  padding: 1rem;
+  border-radius: 1rem;
+  overflow-y: auto;
+}
+
+.fade-in,
+.venue-modal-container {
+  animation: fadeIn cubic-bezier(0.19, 1, 0.22, 1) 0.25s;
+  -webkit-animation: fadeIn cubic-bezier(0.19, 1, 0.22, 1) 0.25s;
+  -moz-animation: fadeIn cubic-bezier(0.19, 1, 0.22, 1) 0.25s;
+  -o-animation: fadeIn cubic-bezier(0.19, 1, 0.22, 1) 0.25s;
+  -ms-animation: fadeIn cubic-bezier(0.19, 1, 0.22, 1) 0.25s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
 }
