--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -59,13 +59,58 @@
   font-weight: normal;
 }
 
+:root {
+  --main-background-color: #ffffff;
+  --main-text-color: #1d2324;
+
+  --widgets-color: 'brightness(0) filter(1)';
+  --input-background: #f7f7f7;
+  --input-text: #171717;
+  --input-shadow: #9ecaed;
+  
+  --course-card-background: #ffffff;
+  --course-card-shadow: rgba(179, 179, 179, 0.644);
+  --course-card-text: #000000;
+  --course-number-background: rgba(0, 0, 0, 0.86);
+  --course-number-text: #C1EDFF;
+
+  --button-primary-blue: #0078c2;
+  --button-hover-blue: #005183;
+  --button-secondary-grey: #727272;
+  --button-hover-grey: #444444;
+  --big-button: white;
+  --big-button-border: rgba(44, 62, 80, 0.7);
+  --big-button-text: rgba(44, 62, 80, 1);
+  --big-button-shadow: rgba(44, 62, 80, 0.2);
+  --button-blue-shadow: rgba(109, 109, 109, 0.644);
+  --button-grey-shadow: rgba(109, 109, 109, 0.644);
+
+  --sync-border: #04852f;
+  --async-border: #683eca;
+
+  --red-pill: #d13e34;
+  --red-pill-shadow: rgba(249, 82, 71, 0.3);
+  --yellow-pill: #b95726;
+  --yellow-pill-shadow:  rgba(244, 159, 50, 0.4);
+  --blue-pill: #0078c2;
+  --blue-pill-shadow: rgba(79, 109, 234, 0.3);
+  --green-pill: #04852f;
+  --green-pill-shadow: rgba(78, 205, 76, 0.3);
+
+  --upcoming-pill: #0078c2;
+  --upcoming-pill-shadow: rgba(109, 109, 109, 0.644);
+}
+
 body {
-  background: white;
+  height: auto; 
+  background-color: var(--main-background-color); 
+  color: var(--main-text-color);
 }
 
 .venue-body-container {
   margin: 2rem 8rem;
   text-align: left;
+  background: var(--main-background-color);
 }
 
 .venue-body-container.is-mobile {
@@ -92,9 +137,12 @@ body {
 .venue-body-container .course-info-title {
   width: 380px;
   padding: 40px 30px;
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 3px 0px var(--course-card-shadow);
   border-radius: 5px;
   margin-right: 2rem;
+  background-color: var(--course-card-background); 
+  color: var(--course-card-text);
+  /* This is where course info cards go */
 }
 
 .venue-body-container .course-info-title .course-name {
@@ -103,12 +151,12 @@ body {
 }
 
 .venue-body-container .course-info-title .course-dept-number {
-  background-color: rgba(0, 0, 0, 0.86);
+  background-color: var(--course-number-background);
   width: 87px;
   height: 23px;
   font-size: 0.8rem;
   text-align: center;
-  color: #C1EDFF;
+  color: var(--course-number-text);
   border-radius: 2px;
 }
 
@@ -122,7 +170,7 @@ body {
   margin-top: 1rem;
   padding: 2rem;
   border-radius: 5px;
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 3px 0px var(--course-card-shadow);
 }
 
 .course-info-title.mobile .course-name {
@@ -131,7 +179,7 @@ body {
 }
 
 .course-info-title.mobile .course-dept-number {
-  background-color: rgba(0, 0, 0, 0.86);
+  background-color: var(--course-number-background);
   width: 130px;
   height: 23px;
   line-height: 23px;
@@ -139,7 +187,7 @@ body {
   text-align: center;
   margin: 0 auto;
   margin-bottom: 5px;
-  color: #C1EDFF;
+  color: var(--course-number-text);
   border-radius: 2px;
 }
 
@@ -246,12 +294,12 @@ body {
 }
 
 .live-border {
-  border: 0.25rem dashed #04852f;
+  border: 0.25rem dashed var(--sync-border);
   border-radius: 1.5rem;
 }
 
 .playback-border {
-  border: 0.25rem dotted #683eca;
+  border: 0.25rem dotted var(--async-border);
   border-radius: 1.5rem;
 }
 
@@ -272,6 +320,7 @@ body {
   color: #2c3e50;
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  background: var(--red-pill);
   /* margin-bottom: 1rem; */
 }
 
@@ -288,7 +337,7 @@ body {
   max-height: 5rem;
   height: 5rem;
   border-radius: 1.5rem;
-  box-shadow: 0px 3px 5px 1px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 5px 1px var(--button-grey-shadow);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   outline: none;
 }
@@ -336,7 +385,6 @@ body {
   background: white;
   margin: 0.5rem 0rem;
   border-radius: 0.75rem;
-  /* color: white; */
   box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644) inset;
   text-align: left;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
@@ -346,7 +394,7 @@ body {
 .instructor-attendance-history-pill:focus .name-area {
   padding-top: 0.8rem;
   border-radius: 1rem;
-  box-shadow: 0px 3px 5px 1px rgba(109, 109, 109, 0.644) inset;
+  box-shadow: 0px 3px 5px 1px var(--button-grey-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -408,69 +456,69 @@ body {
 
 
 .instructor-attendance-history-pill.good {
-  border: 2px solid #04852f;
+  border: 2px solid var(--green-pill);
   /* box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33); */
 }
 .instructor-attendance-history-pill.good .date-area {
-  background-color: #04852f;
+  background-color: var(--green-pill);
 }
 .instructor-attendance-history-pill.good .percentage-area {
-  background-color: #04852f;
+  background-color: var(--green-pill);
 }
 
 .instructor-attendance-history-pill.good .percentage-area::before {
-  border-right: 0rem solid #04852f;
-  border-bottom: 3.9rem solid #04852f;
+  border-right: 0rem solid var(--green-pill);
+  border-bottom: 3.9rem solid var(--green-pill);
 }
 
 .instructor-attendance-history-pill.good:hover,
 .instructor-attendance-history-pill.good:focus {
   outline: none;
-  box-shadow: 0px 0px 10px 7px rgba(65, 162, 91, 0.33);
+  box-shadow: 0px 0px 10px 7px var(--green-pill-shadow);
 }
 
 .instructor-attendance-history-pill.medium {
-  border: 2px solid #b95726;
+  border: 2px solid var(--yellow-pill);
   /* box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36); */
 }
 .instructor-attendance-history-pill.medium .date-area {
-  background-color: #b95726;
+  background-color: var(--yellow-pill);
 }
 .instructor-attendance-history-pill.medium .percentage-area {
-  background-color: #b95726;
+  background-color: var(--yellow-pill);
 }
 
 .instructor-attendance-history-pill.medium .percentage-area::before {
-  border-right: 0rem solid #b95726;
-  border-bottom: 3.9rem solid #b95726;
+  border-right: 0rem solid var(--yellow-pill);
+  border-bottom: 3.9rem solid var(--yellow-pill);
 }
 
 .instructor-attendance-history-pill.medium:hover,
 .instructor-attendance-history-pill.medium:focus {
   outline: none;
-  box-shadow: 0px 0px 10px 7px rgba(233, 126, 71, 0.36);
+  box-shadow: 0px 0px 10px 7px var(--yellow-pill-shadow);
 }
 
 .instructor-attendance-history-pill.bad {
-  border: 2px solid #d13e34;
+  border: 2px solid var(--red-pill);
   /* box-shadow: 0px 3px 10px rgba(255, 99, 88, 0.36); */
 }
 .instructor-attendance-history-pill.bad .date-area {
-  background-color: #d13e34;
+  background-color: var(--red-pill);
 }
 .instructor-attendance-history-pill.bad .percentage-area {
-  background-color: #d13e34;
+  background-color: var(--red-pill);
 }
 
 .instructor-attendance-history-pill.bad .percentage-area::before {
-  border-right: 0rem solid #d13e34;
-  border-bottom: 3.9rem solid #d13e34;
+  border-right: 0rem solid var(--red-pill);
+  border-bottom: 3.9rem solid var(--red-pill);
 }
 
 .instructor-attendance-history-pill.bad:hover,
 .instructor-attendance-history-pill.bad:focus {
   outline: none;
-  box-shadow: 0px 0px 10px 7px rgba(255, 99, 88, 0.36);
+  box-shadow: 0px 0px 10px 7px var(--red-pill-shadow);
 }
 
 .instructor-attendance .month-area,
@@ -559,7 +607,7 @@ body {
 
 .course-pill .background-pillar {
   position: absolute;
-  background-color: #d13e34;
+  background-color: var(--red-pill);
   left: -1%;
   top: -6%;
   border-radius: 5px;
@@ -647,14 +695,14 @@ custom-scrollbar::-webkit-scrollbar-thumb {
 .big-button {
   font-size: 1rem;
   font-weight: normal;
-  border: 2px solid rgba(44, 62, 80, 0.7);
-  color: rgba(44, 62, 80, 1);
+  border: 2px solid var(--big-button-border);
+  color: var(--big-button-text);
   padding: 0px 30px;
   height: 40px;
   line-height: 35px;
   border-radius: 5px;
-  background-color: white;
-  box-shadow: 0px 3px 5px rgba(44, 62, 80, 0.1);
+  background-color: var(--big-button);
+  box-shadow: 0px 3px 5px var(--big-button-shadow);
   cursor: pointer;
   transition: border 0.25s, box-shadow 0.25s;
   margin: 0.5rem;
@@ -663,8 +711,8 @@ custom-scrollbar::-webkit-scrollbar-thumb {
 .big-button:hover,
 .big-button:focus {
   outline: none;
-  border: 2px solid rgba(44, 62, 80, 1);
-  box-shadow: 0px 0px 10px 7px rgba(44, 62, 80, 0.2);
+  border: 2px solid var(--big-button-border);
+  box-shadow: 0px 0px 10px 7px var(--big-button-shadow);
 }
 
 .center-fill-section {
@@ -706,20 +754,20 @@ a:hover {
 }
 
 .lecture-pill-min.green {
-  background-color: #04852f;
-  box-shadow: 0px 3px 5px rgba(78, 205, 76, 0.3);
+  background-color: var(--green-pill);
+  box-shadow: 0px 3px 5px var(--green-pill-shadow);
 }
 .lecture-pill-min.blue {
-  background-color: #0078c2;
-  box-shadow: 0px 3px 5px rgba(79, 109, 234, 0.3);
+  background-color: var(--blue-pill);
+  box-shadow: 0px 3px 5px var(--blue-pill-shadow);
 }
 .lecture-pill-min.yellow {
-  background-color: #b95726;
-  box-shadow: 0px 3px 5px rgba(244, 159, 50, 0.4);
+  background-color: var(--yellow-pill);
+  box-shadow: 0px 3px 5px var(--yellow-pill-shadow);
 }
 .lecture-pill-min.red {
-  background-color: #d13e34;
-  box-shadow: 0px 3px 5px rgba(249, 82, 71, 0.3);
+  background-color: var(--red-pill);
+  box-shadow: 0px 3px 5px var(--red-pill-shadow);
 }
 
 .lecture-pills-min-container .lecture-pill-holder {
@@ -744,19 +792,19 @@ a:hover {
 }
 
 .mobile-event-pill-area .mobile-pill.good {
-  border: 3px solid #04852f;
-  box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
+  border: 3px solid var(--green-pill);
+  box-shadow: 0px 3px 10px var(--green-pill-shadow);
 }
 
 .mobile-event-pill-area .mobile-pill.bad {
-  border: 3px solid #d13e34;
-  box-shadow: 0px 3px 10px rgba(255, 99, 88, 0.36);
+  border: 3px solid var(--red-pill);
+  box-shadow: 0px 3px 10px var(--red-pill-shadow);
 
 }
 
 .mobile-event-pill-area .mobile-pill.medium {
-  border: 3px solid #b95726;
-  box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36);
+  border: 3px solid var(--yellow-pill);
+  box-shadow: 0px 3px 10px var(--yellow-pill-shadow);
 }
 
 .mobile-event-pill-area .mobile-pill .day-of-week {
@@ -783,7 +831,7 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: white;
-  box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 3px 1px var(--upcoming-pill-shadow);
   position: relative;
   z-index: 2;
   padding: 0px 20px;
@@ -797,7 +845,7 @@ a:hover {
   left: -2%;
   width: 104%;
   height: 100%;
-  background-color: #0078c2;
+  background-color: var(--upcoming-pill);
   border-radius: 5px;
 }
 
@@ -852,15 +900,16 @@ a:hover {
 .btn {}
 
 .btn.btn-primary {
-  background: #0078c2;
-  /* border: 0.1rem solid #005183; */
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
+  background: var(--button-primary-blue);
+  border: 0.1rem solid var(--button-primary-blue); 
+  box-shadow: 0px 3px 3px 0px var(--button-blue-shadow);
+  outline: none;
 }
 
 .btn.btn-secondary {
-  background: #727272;
+  background: var(--button-secondary-grey);
   /* border: 0.1rem solid #444444; */
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 3px 0px var(--button-grey-shadow);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -869,9 +918,9 @@ a:hover {
 .btn.btn-primary:active,
 .btn.btn-primary:target {
   outline: none;
-  border: 0.1rem solid #005183;
-  background: #005183;
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644) inset;
+  border: 0.1rem solid var(--button-blue-shadow);
+  background: var(--button-hover-blue);
+  box-shadow: 0px 3px 3px 0px var(--button-blue-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -879,7 +928,7 @@ a:hover {
 .btn.btn-primary:focus img,
 .btn.btn-primary:active img,
 .btn.btn-primary:target img {
-  filter: invert(1);
+  filter: var(--widgets-color) invert(1);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -888,9 +937,9 @@ a:hover {
 .btn.btn-secondary:active
 .btn.btn-secondary:target {
   outline: none;
-  border: 0.1rem solid #444444;
-  background: #444444;
-  box-shadow: 0px 3px 3px 0px rgba(109, 109, 109, 0.644) inset;
+  border: 0.1rem solid var(--button-hover-grey);
+  background: var(--button-hover-grey);
+  box-shadow: 0px 3px 3px 0px var(--button-grey-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -898,21 +947,27 @@ a:hover {
 .btn.btn-secondary:focus img,
 .btn.btn-secondary:active img,
 .btn.btn-secondary:target img {
-  filter: invert(1);
+  filter: var(--widgets-color) invert(1);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 
 
 input,select {
-  background: #f7f7f7 !important;
+  color: var(--input-text) !important;
+  background: var(--input-background) !important;
   border-radius: 0.25rem !important;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.input-group input {
-  min-height:3rem;
+.form-control:focus {
+  outline: none;
+  border-color: var(--input-shadow);
+  box-shadow: 0 0 10px var(--input-shadow);
 }
+
+
+
 
 /* ------------------ */
 
