--- a/src/assets/css/venue.css
+++ b/src/assets/css/venue.css
@@ -64,15 +64,10 @@ html,body {
   font-weight: lighter;
 }
 
-@font-face {
-  font-family: "Ubuntu Mono";
-  src: url("../fonts/Ubuntu/UbuntuMono-Regular.ttf");
-}
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 
-@font-face {
-  font-family: "Ubuntu Mono";
-  src: url("../fonts/Ubuntu/UbuntuMono-Bold.ttf");
-  font-weight: bold;
+* {
+  font-family: "Comfortaa", "Exo", sans-serif;
 }
 
 /* Logo Styles */
@@ -97,18 +92,23 @@ html,body {
 }
 
 .logo-text {
-  font-family: "Exo";
-  font-weight: bold;
+  /* font-family: "Exo";
+  font-weight: bold; */
   /*font-size: 25px;*/
   position: relative;
   margin-top: -20px;
-  color: #2C3E50;
+  color: #2C3E50; 
 }
 
-h1 {
-  /* font-family: "Exo"; */
-  font-weight: bold;
-  color: #2C3E50;
+h1,h2,h4 {
+  font-family: "Exo";
+  font-weight: bold !important;
+  color: var(--dashboard-text-color);
+}
+
+h3,.course-name, .name-div {
+  font-family: "Exo";
+  font-weight: bold !important;
 }
 
 .sub-logo {
