--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -1,63 +1,3 @@
-/* Custom Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
-
-@font-face {
-  font-family: Oxygen;
-  src: url(../fonts/Oxygen/Oxygen-Regular.ttf);
-}
-
-@font-face {
-  font-family: Oxygen;
-  src: url(../fonts/Oxygen/Oxygen-Bold.ttf);
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: Oxygen;
-  src: url(../fonts/Oxygen/Oxygen-Light.ttf);
-  font-weight: lighter;
-}
-
-@font-face {
-  font-family: NotoSans;
-  src: url(../fonts/NotoSans/NotoSansJP-Medium.otf);
-}
-
-@font-face {
-  font-family: NotoSans;
-  src: url(../fonts/NotoSans/NotoSansJP-Bold.otf);
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: NotoSans;
-  src: url(../fonts/NotoSans/NotoSansJP-Thin.otf);
-  font-weight: lighter;
-}
-
-@font-face {
-  font-family: Lato;
-  src: url(../fonts/Lato/Lato-Black.ttf);
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: Lato;
-  src: url(../fonts/Lato/Lato-Bold.ttf);
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: Lato;
-  src: url(../fonts/Lato/Lato-Light.ttf);
-  font-weight: lighter;
-}
-
-/* CSS Style */
-* {
-  font-family: Comfortaa, Arial, NotoSans;
-  font-weight: normal;
-}
 
 :root {
   --main-background-color: #ffffff;
@@ -77,6 +17,8 @@
   --course-card-text: #000000;
   --course-number-background: rgba(0, 0, 0, 0.86);
   --course-number-text: #C1EDFF;
+  --course-pill-shadow: rgba(109, 109, 109, 0.644);
+  --course-pill-hover: rgba(160, 160, 160, 0.644);
 
   --button-primary-blue: #0078c2;
   --button-hover-blue: #005183;
@@ -88,6 +30,8 @@
   --big-button-shadow: rgba(44, 62, 80, 0.2);
   --button-blue-shadow: rgba(67, 65, 120, 0.844);
   --button-grey-shadow: rgba(109, 109, 109, 0.644);
+  --button-text-color: white;
+  --button-text-hover: white;
 
   --sync-border: #04852f;
   --async-border: #683eca;
@@ -101,7 +45,9 @@
   --green-pill: #04852f;
   --green-pill-shadow: rgba(78, 205, 76, 0.3);
   --foreground-pill: #f5f5f5;
+  --foreground-pill-text: #000000;
   --foreground-pill-shadow: rgba(109, 109, 109, 0.644);
+  --foreground-pill-hover: rgba(54, 54, 54, 0.644);
   --date-and-percent: white;
 
   --upcoming-pill: #0078c2;
@@ -126,7 +72,7 @@ body {
   color: var(--main-text-color);
 }
 
-h1 {
+h1,h2,h4 {
   color: var(--dashboard-text-color);
 }
 
@@ -229,7 +175,7 @@ h1 {
 
 .weekly-attendance-bar .graph-container .label {
   font-size: 0.8rem;
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.86);
   width: 100px;
   text-align: right;
   height: 25px;
@@ -340,7 +286,7 @@ h1 {
   height: 100%;
   cursor: pointer;
   color: #2c3e50;
-  box-shadow: 0px 3px 3px 1px rgba(109, 109, 109, 0.644);
+  box-shadow: 0px 3px 3px 1px var(--course-pill-shadow);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   /* margin-bottom: 1rem; */
 }
@@ -358,7 +304,7 @@ h1 {
   max-height: 5rem;
   height: 5rem;
   border-radius: 1.5rem;
-  box-shadow: 0px 3px 5px 1px var(--button-grey-shadow);
+  box-shadow: 0px 3px 5px 1px var(--course-pill-hover);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   outline: none;
 }
@@ -406,7 +352,7 @@ h1 {
   background: var(--foreground-pill);
   margin: 0.5rem 0rem;
   border-radius: 0.75rem;
-  color: var(--lecture-name-text);
+  color: var(--forgeround-pill-text);
   box-shadow: 0px 3px 3px 1px var(--foreground-pill-shadow) inset;
   text-align: left;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
@@ -416,7 +362,7 @@ h1 {
 .instructor-attendance-history-pill:focus .name-area {
   padding-top: 0.8rem;
   border-radius: 1rem;
-  box-shadow: 0px 3px 5px 1px var(--button-grey-shadow) inset;
+  box-shadow: 0px 3px 5px 1px var(--foreground-pill-hover) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -926,6 +872,7 @@ a:hover {
   border: 0.1rem solid var(--button-primary-blue); 
   box-shadow: 0px 3px 3px 0px var(--button-blue-shadow);
   outline: none;
+  color: var(--button-text-color);
 }
 
 .btn.btn-secondary {
@@ -933,23 +880,33 @@ a:hover {
   /* border: 0.1rem solid #444444; */
   box-shadow: 0px 3px 3px 0px var(--button-grey-shadow);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  color: var(--button-text-color);
 }
 
 .btn.btn-danger {
   background: var(--button-danger);
   border: 0.1rem solid rgba(255,255,255, 0);
   box-shadow: none;
+  color: var(--button-text-color);
 } 
 
 .btn.btn-primary:hover,
 .btn.btn-primary:focus,
 .btn.btn-primary:active,
+.btn.btn-primary:active:focus,
 .btn.btn-primary:target {
   outline: none;
   border: 0.1rem solid var(--button-blue-shadow);
   background: var(--button-hover-blue);
   box-shadow: 0px 3px 3px 0px var(--button-blue-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  color: var(--button-text-hover);
+}
+
+.btn.btn-primary:active:focus,
+.btn.btn-secondary:active:focus {
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 .btn.btn-primary:hover img,
@@ -962,13 +919,15 @@ a:hover {
 
 .btn.btn-secondary:hover,
 .btn.btn-secondary:focus,
-.btn.btn-secondary:active
+.btn.btn-secondary:active,
+.btn.btn-secondary:active:focus,
 .btn.btn-secondary:target {
   outline: none;
   border: 0.1rem solid var(--button-hover-grey);
   background: var(--button-hover-grey);
   box-shadow: 0px 3px 3px 0px var(--button-grey-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  color: var(--button-text-hover);
 }
 
 .btn.btn-secondary:hover img,
@@ -988,6 +947,7 @@ a:hover {
   background-color: var(--button-danger-hover);
   box-shadow: 0px 3px 3px 0px var(--button-danger-shadow) inset;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  color: white;
 } 
 
 input,select {
@@ -995,6 +955,14 @@ input,select {
   background: var(--input-background) !important;
   border-radius: 0.25rem !important;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+/* Auto-fill style */
+input:-webkit-autofill {
+  -webkit-text-fill-color: var(--input-text) !important;
+  -webkit-box-shadow: 0 0 0px 1000px var(--input-background) inset;
+  border-radius: 0.25rem !important;
+  transition: background-color 500s ease-in-out 0s;
 }
 
 .input-group-append {
