--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -1,4 +1,3 @@
-
 :root {
   --main-background-color: #ffffff;
   --main-text-color: #1d2324;
@@ -74,6 +73,10 @@ body {
 
 h1,h2,h4 {
   color: var(--dashboard-text-color);
+}
+
+.svg-color {
+  filter: var(--widgets-color);
 }
 
 .venue-body-container {
@@ -957,7 +960,7 @@ input,select {
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-/* Auto-fill style */
+/* Auto fill styling */
 input:-webkit-autofill {
   -webkit-text-fill-color: var(--input-text) !important;
   -webkit-box-shadow: 0 0 0px 1000px var(--input-background) inset;
