--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -46,8 +46,8 @@
   --blue-pill-shadow: rgba(79, 109, 234, 0.3);
   --green-pill: #04852f;
   --green-pill-shadow: rgba(78, 205, 76, 0.3);
-  --foreground-pill: #f5f5f5;
-  --foreground-pill-text: #000000;
+  /* --foreground-pill: #f5f5f5; */
+  /* --foreground-pill-text: #000000; */
   --foreground-pill-shadow: rgba(109, 109, 109, 0.644);
   --foreground-pill-hover: rgba(54, 54, 54, 0.644);
   --date-and-percent: white;
@@ -116,7 +116,7 @@ h1,h2,h4 {
   box-shadow: 0px 3px 3px 0px var(--course-card-shadow);
   border-radius: 5px;
   margin-right: 2rem;
-  background-color: var(--course-card-background); 
+  background-color: var(--main-background-color); 
   color: var(--course-card-text);
 }
 
@@ -356,10 +356,10 @@ h1,h2,h4 {
   left: 20%;
   bottom: 0;
   padding-left: 1rem;
-  background: var(--foreground-pill);
+  background: var(--main-background-color);
   margin: 0.5rem 0rem;
   border-radius: 0.75rem;
-  color: var(--forgeround-pill-text);
+  color: var(--foreground-pill-text);
   box-shadow: 0px 3px 3px 1px var(--foreground-pill-shadow) inset;
   text-align: left;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
