--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -279,12 +279,17 @@ h1,h2,h4 {
   border-color: var(--sync-border);
 }
 
-.live-border:hover {
-  border-width: 0.1rem;
-  padding: 0.4rem;
+.live-border-display-only {
+  margin: 0.1rem;
+  border-width: 0.25rem;
   border-style: dashed;
   border-radius: 1.5rem;
   border-color: var(--sync-border);
+}
+
+.live-border:hover {
+  border-width: 0.1rem;
+  padding: 0.4rem;
 }
 
 .playback-border {
@@ -295,12 +300,17 @@ h1,h2,h4 {
   border-color: var(--async-border);
 }
 
-.playback-border:hover {
-  padding: 0.4rem;
-  border-width: 0.1rem;
+.playback-border-display-only {
+  margin: 0.1rem;
+  border-width: 0.25rem;
   border-style: dotted;
   border-radius: 1.5rem;
   border-color: var(--async-border);
+}
+
+.playback-border:hover {
+  padding: 0.4rem;
+  border-width: 0.1rem;
 }
 
 .courseinfo-attendance-listing {
@@ -309,18 +319,16 @@ h1,h2,h4 {
 }
 
 .instructor-attendance-history-pill {
-  /* border: 2px solid #d13e34; */
+  display: inline-block;
   border-radius: 1rem;
   margin-right: 1rem;
   position: relative;
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
+  width: 24rem;
+  height: 4rem;
   cursor: pointer;
   color: #2c3e50;
   box-shadow: 0px 3px 3px 1px var(--course-pill-shadow);
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
-  /* margin-bottom: 1rem; */
 }
 
 .instructor-attendance-history-pill:hover,
@@ -330,10 +338,8 @@ h1,h2,h4 {
   margin-left: -0.5rem;
   margin-top: -0.5rem;
   margin-right: -0.5rem;
-  margin-bottom: 0.25rem;
-  max-width: 25rem;
+  margin-bottom: -0.5rem;
   width: 25rem;
-  max-height: 5rem;
   height: 5rem;
   border-radius: 1.5rem;
   box-shadow: 0px 3px 5px 1px var(--course-pill-hover);
